[package]
name = "lending"
version = "0.1.0"
edition = "2021"

[dependencies]
astroport = "1.0.1"
cosmwasm-std = { version = "0.16.2" }
cosmwasm-storage = { version = "0.16.0" }
cw-storage-plus = "0.8.0"
cw2 = "0.8.1"
cw20 = "0.8.1"
schemars = "0.8.3"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
services = { path = "../../packages/services", default-features = false, version = "1.0.0" }
thiserror = { version = "1.0.26" }
